<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vicon_px4_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chenrc@umich.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>fastrtps</build_depend>
  <build_depend>fastcdr</build_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>vicon_receiver</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
